# MLOPS-End-to-End-Pipeline-and-DVC

./: .gitignore  README.md  dvc.yaml  main.py  project_flow.txt  pyproject.toml
dvclive/: params.yaml
src/: data_ingestion.py  model_building.py  model_evaluation.py
